welcome.lessons.welcome.methods.picture.PictureMono1.scala.code
override def run() {
}

def faireV(){
  if 
  baisseBrosse()
  avance()
  leveBrosse()
  gauche()
  baisseBrosse()
  recule()
  leveBrosse()
  droite()
  avance()
  baisseBrosse()  
    
}

avance(2)
faireV()